# DailyCoding

./: .gitmodules  README.md
AdventOfCode/: README.md
AdventOfCode/2021/Day1/: main1.py  main2.py
AdventOfCode/2021/Day10/: main.py
AdventOfCode/2021/Day11/: main.py
AdventOfCode/2021/Day12/: main.py
AdventOfCode/2021/Day13/: main.py
AdventOfCode/2021/Day14/: file1.txt  main.py
AdventOfCode/2021/Day15/: main.py
AdventOfCode/2021/Day16/: main.py  main2.py
AdventOfCode/2021/Day17/: main.py
AdventOfCode/2021/Day18/: main.cpp  main2.cpp
AdventOfCode/2021/Day19/: main.py  main2.py
AdventOfCode/2021/Day2/: main.py
AdventOfCode/2021/Day20/: main.py  main2.py
AdventOfCode/2021/Day21/: main.py  main2.py
AdventOfCode/2021/Day22/: main.py  main2.py  main4.py
AdventOfCode/2021/Day3/: main.py
AdventOfCode/2021/Day4/: main.py
AdventOfCode/2021/Day5/: main.py
AdventOfCode/2021/Day6/: main.py
AdventOfCode/2021/Day7/: main.py
AdventOfCode/2021/Day8/: main.py
AdventOfCode/2021/Day9/: main.py
AdventOfCode/2022/Day1/: main1.py  main2.py
AdventOfCode/2022/Day2/: main1.py  main2.py
AdventOfCode/2022/Day3/: main.py  main2.py
AdventOfCode/2022/Day4/: main.py  main2.py
AdventOfCode/2022/Day5/: main.py  main2.py
AdventOfCode/2022/Day6/: main.py  main2.py
AdventOfCode/2022/Day7/: main.py  main2.py
AdventOfCode/2022/Day8/: main.py  main2.py
AdventOfCode/2022/Day9/: main.py  main2.py
Algorithms/: bubblesort.hpp  heapsort.hpp  insertsort.hpp  introsort.hpp  mergesort.hpp  queue.hpp  quicksort.hpp  selectionsort.hpp  shellsort.hpp  stack.hpp
AntSimulation/: CMakeLists.txt
AntSimulator/: README.md  ant.py  main.py  map.py  nest.py
ApproximatingPi/: README.md  main.py
Boids/: Boid.h  Boids.h  CMakeLists.txt  README.md  main.cpp
CDonut/: README.md  main.c  prog
CLT/: README.md  main.py
Checkers/: CMakeLists.txt
Checkers/code/: Board.hpp  Context.hpp  Game.hpp  main.cpp
DesignPattern/ecs/: README.md
DesignPattern/ecs/src/: main.rs
DodgeRunner/: README.md
DoublePendulum/: DoublePendulum.py  README.md  main.py
Drones/: .gitignore  CMakeLists.txt  README.md
Drones/docs/: Doxyfile.in  Graph.puml
Drones/include/: AutoDrone.h  Constants.h  Cuboid.h  Drawable.h  Drone.h  DronePath.h  Figure.h  MatrixAction.h  Plane.h  Plot.h  Propeller.h  Pyramid.h  Rectangular.h  Scene.h  Tetrahedron.h  Transform.h  VectorAction.h
Drones/source/: AutoDrone.cpp  Cuboid.cpp  Drawable.cpp  Drone.cpp  DronePath.cpp  Figure.cpp  Plane.cpp  Plot.cpp  Propeller.cpp  Pyramid.cpp  Rectangular.cpp  Scene.cpp  Tetrahedron.cpp  Transform.cpp  main.cpp
Drones/test/: CMakeLists.txt  MatrixAction-test.cpp  Rectangular-test.cpp  Transform-test.cpp  VectorAction-test.cpp
Face-detector/: CMakeLists.txt  README.md
Face-detector/include/: FaceDetectorCascade.h  FaceDetectorDNN.h
Face-detector/source/: FaceDetectorCascade.cpp  FaceDetectorDNN.cpp  main.cpp
FourierSeries/: README.md  dft.py  main.py
FourierSeries/img/: counturing.py  points.txt
GameOfLife/: CMakeLists.txt  README.md
GameOfLife/code/: Game.hpp  Universe.hpp  main.cpp
MinMax-Checkers/: CMakeLists.txt  README.md
MinMax-Checkers/code/: Checkers.cpp  Checkers.h  Checkers.hpp  MinMax.hpp  main.cpp
MiniLangParsers/: README.md
MiniLangParsers/TurtleParser/: inst.tur  main.py  tparser.py
MiniLangParsers/YaccLexCalculator/: calc.l  calc.tab.c  calc.tab.h  calc.y  lex.yy.c
MiniLangParsers/YaccTimeParser/: config.in  config.out  lex.yy.c  timeParser.l  timeParser.tab.c  timeParser.tab.h  timeParser.y
QualityAirApp/: README.md  main.py  request.txt
SimpleGames/DodgeRunner/: main.py
SimpleGames/Snake/: .gitignore  README.md
SimpleGames/Snake/code/: board.h  game.h  main.cpp  snake.h
SimpleGames/SpaceInvaders/: README.md  main.py
SimpleGames/TicTacToe/: README.md
SimpleGames/TicTacToe/Headers/: board_view.h  cell.h  cell_view.h  player.h  stupid_ai.h
SimpleGames/TicTacToe/Sources/: game.cpp  stupid_ai.cpp
SimpleGames/rust-invaders/: Cargo.toml  README.md
SimpleGames/rust-invaders/src/: components.rs  main.rs  player.rs
SimpleGames/rust-invaders/src/enemy/: formation.rs  mod.rs
Snake/: CMakeLists.txt  README.md
Snake/code/: board.cpp  game.cpp  snake.cpp
SpaceInvaders/: main.py
TicTacToe/: .gitignore  CMakeLists.txt
TicTacToe/Headers/: board.h  game.h  mark.h  person_player.h
TicTacToe/Sources/: board.cpp  board_view.cpp  cell.cpp  cell_view.cpp  main.cpp  person_player.cpp  player.cpp
rust-project/: .gitignore  Cargo.toml  README.md
rust-project/headlines/: Cargo.toml
rust-project/headlines/src/: headlines.rs  main.rs
rust-project/newsapi/: Cargo.toml
rust-project/newsapi/examples/src/: main.rs  theme.rs
rust-project/newsapi/src/: lib.rs
rust-project/src/: main.rs
