[package]
name = "headlines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.14.0"
serde = { version = "1.0.175", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
newsapi = { path = "../newsapi" }
