[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"], optional = true }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
ureq = { version = "2.7.1", features = ["json"] }
url = "2.4.0"

[features]
async = ["reqwest"]
